<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/sixteen_dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/zuri_image"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:src="@drawable/zuri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/zuri_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/zuri_link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zuri"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/zuri_image"
        app:layout_constraintTop_toBottomOf="@id/zuri_image"
        app:layout_constraintEnd_toEndOf="@id/zuri_image"
        android:onClick="zuriLink"/>

    <ImageView
        android:id="@+id/hng_image"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:src="@drawable/hng"
        app:layout_constraintLeft_toRightOf="@id/zuri_image"
        app:layout_constraintRight_toLeftOf="@id/i4g_image"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/hng_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hng_link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hng"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/hng_image"
        app:layout_constraintTop_toBottomOf="@id/hng_image"
        app:layout_constraintEnd_toEndOf="@id/hng_image"
        android:onClick="hngLink"/>

    <ImageView
        android:id="@+id/i4g_image"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:src="@drawable/i4g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/hng_image"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/i4g_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/i4g_link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i4g"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/i4g_image"
        app:layout_constraintTop_toBottomOf="@id/i4g_image"
        app:layout_constraintEnd_toEndOf="@id/i4g_image"
        android:onClick="i4gLink"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/type_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hng_link_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:onClick="displayInput"
        android:text="@string/done"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_input_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/display_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>